# tg_bot

./: .env.sample  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
bot/: __main__.py
bot/config/: __init__.py  config.py
bot/logic/: __init__.py  verify_phone.py
bot/nats/: __init__.py  client.py  provider.py
